--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@heroicons/react": "^1.0.6",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/material": "^5.10.11",
     "@reduxjs/toolkit": "^1.8.2",
     "axios": "^0.27.2",
+    "date-fns": "^2.29.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.32.2",
